--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <body>
     <h1>This is my first github page</h1>
+    <p>My name is Leon Meyer, I am currently a student at Hochschule der Medien in Stuttgart, Germany. </p>
   </body>
 
 </html>
