added head with meta data

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
-  <title>
-    First website
-  </title>
-
+<DOCTYPE html>
+<html lang="de">
+  
+  <head>
+    <title>First website </title>
+    <meta charset="utf-8"/>
+    <meta name="author" content="Leon Meyer"/>
+    <meta name="description" lang="de" content="Leon Meyer"/>
+  </head>
+  
   <body>
     <p>My name is Leon Meyer, I am currently a student at Hochschule der Medien in Stuttgart, Germany. </p>
   </body>
