--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   
   <head>
-    <title>First website </title>
+    <title>Leon Meyer</title>
     <meta charset="utf-8"/>
     <meta name="author" content="Leon Meyer"/>
     <meta name="description" lang="de" content="Leon Meyer"/>
