--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8"/>
     <meta name="author" content="Leon Meyer"/>
     <meta name="description" lang="de" content="Leon Meyer"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
   <body>
