--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Leon Meyer"/>
     <meta name="description" lang="de" content="Leon Meyer"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style> p {background-color: #e31134; color: white; </style>
+    <style> p {background-color: #e31134; color: white; padding: 5px;</style>
   </head>
   
   <body>
