--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
   
   <head>
+    <meta charset="UTF-8"/>
     <title>Leon Meyer</title>
-    <meta charset="utf-8"/>
     <meta name="author" content="Leon Meyer"/>
     <meta name="description" lang="de" content="Leon Meyer"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <p>My name is Leon Meyer, I am currently a student at Hochschule der Medien in Stuttgart, Germany. </p>
+    <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart </p>
   </body>
 
 </html>
