--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart </p>
+    <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart.</p>
   </body>
 
 </html>
