--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <body>
     <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart.</p>
+    <p>Ursprünglich komme ich aus Franken in Bayern.</p>
   </body>
 
 </html>
