--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   </head>
   
   <body>
-     <img src="gschmarri.png" alt="Drawn picture of Leon" width="250" height="250"> 
-    <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart.</p>
-    <p>Ursprünglich komme ich aus Franken in Bayern.</p>
+    <img src="gschmarri.png" alt="Drawn picture of Leon" width="250" height="250"> 
+    
+    <section>
+      <p>Mein Name ist Leon Meyer. Zurzeit bin ich Student an der Hochschule der Medien in Stuttgart.</p>
+      <p>Ursprünglich komme ich aus Franken in Bayern.</p>
+    </section>
   </body>
 
 </html>
