--- a/404.html
+++ b/404.html
@@ -11,8 +11,10 @@
   </head>
   
   <body>
-    <p>Oops, page does not exist.</p>
-    <img src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250"> 
+    <div class="center">
+      <p>Oops, page does not exist.</p>
+      <img src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
+    </div>
   </body>
 
 </html>
