--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
   
   <body>
     <div class="center">
-      <p>Oops, page does not exist.</p>
-      <img src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
+      <p class="center">Oops, page does not exist.</p>
+      <img class="center" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
     </div>
   </body>
 
