--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <body>
     <div class="center">
       <p class="center">Oops, page does not exist.</p>
-      <img class="center" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
+      <img class="centerImage" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
     </div>
   </body>
 
