--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
   
   <body>
     <p class="center">Oops, page does not exist.</p>
-    <img class="centerImage" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
+    <img id="centerImage" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
   </body>
 
 </html>
