--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
   </head>
   
   <body>
-    <p class="center">Oops, page does not exist.</p>
-    <img id="centerImage" src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
+    <p>Oops, page does not exist.</p>
+    <img src="m78jgjm21qy41.gif" alt="robot steps on banana" width="250" height="250">
   </body>
 
 </html>
